<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_receipt_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CreateReceiptActivity"
    tools:layout_editor_absoluteX="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/receipt_items"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:background="@color/backgroundMedium"
...
        </androidx.recyclerview.widget.RecyclerView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/create_receipt_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">

        <View
            android:id="@+id/create_receipt_bottom_layout_divider"
...
            style="@style/Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="€"
            app:layout_constraintBaseline_toBaselineOf="@id/totalText"
            app:layout_constraintEnd_toStartOf="@id/totalSum"
            tools:layout_editor_absoluteX="216dp" />


        <TextView
            android:id="@+id/totalSum"
            style="@style/Body1"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/totalText"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="24dp" />

        <Spinner
            android:id="@+id/account_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:dropDownWidth="200dp"
            app:layout_constraintBaseline_toBaselineOf="@id/accountText"
            app:layout_constraintEnd_toEndOf="parent" />

        <Spinner
            android:id="@+id/budget_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:dropDownWidth="350dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_spinner" />
...
            app:layout_constraintEnd_toStartOf="@id/account_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/accountText" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
...
            app:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/outline_save_white_48" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
...
