...
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/add_budget_dialog_frequency"
        />

    <EditText
        android:layout_margin="30dp"
        android:id="@+id/add_budget_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        style="@style/Title2"
        android:hint="Budget Name"
        app:layout_constraintBaseline_toBaselineOf="@id/add_budget_dialog_name"
...
    <TextView
        android:id="@+id/add_budget_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Body1"
        app:layout_constraintBaseline_toBaselineOf="@id/add_budget_dialog_amount"
        app:layout_constraintEnd_toStartOf="@id/add_budget_total"
        android:text="€"/>

    <EditText
        android:layout_margin="30dp"
        android:id="@+id/add_budget_total"
        android:layout_width="wrap_content"
...
        android:hint="100.00"
        app:layout_constraintBaseline_toBaselineOf="@id/add_budget_dialog_amount"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Spinner
        android:id="@+id/add_budget_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:dropDownWidth="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/add_budget_dialog_account"/>

    <Spinner
        android:id="@+id/add_budget_frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/add_budget_dialog_frequency" />

...
